# linkml-performance-test

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: benchmarks.ipynb  plot_results.ipynb
notebooks/results/: results.tsv
results/: results-dc-1_1x-10k.tsv  results-dc-1_2x-10k.tsv
src/linkml_performance_test/: runner.py
src/linkml_performance_test/model/: benchconfig.py  benchconfig.yaml  obograph.py  obograph.yaml  obograph_dataclasses.py  obograph_pydantic.py
tests/: __init__.py  test_linkml_performance_test.py
